# fb-friends-parser

./: .gitignore  CMakeLists.txt  README.md
Resources/Parser/: resources.qrc
Sources/Parser/: CMakeLists.txt  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui
